--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,7 @@
 /* Empty. Add your own CSS if you like */
+.social-icon {
+	float: left;
+	margin-top: -2px;
+	margin-right: 12px;
+	width: 25px;
+}
