--- a/www/templates/socials.html
+++ b/www/templates/socials.html
@@ -1,8 +1,8 @@
 <ion-view view-title="Socials & Chats">
   <ion-content>
     <ion-list>
-      <ion-item ng-repeat="playlist in playlists" href="#/app/social/{{playlist.id}}">
-        <img src="img/{{playlist.icon}}" class="social-icon"> {{playlist.title}}
+      <ion-item ng-repeat="social in socials" href="#/app/social/{{social.id}}">
+        <img src="img/{{social.icon}}" class="social-icon"> {{social.title}}
       </ion-item>
     </ion-list>
   </ion-content>
