--- a/www/css/style.css
+++ b/www/css/style.css
@@ -5,3 +5,18 @@
 	margin-right: 12px;
 	width: 25px;
 }
+.msg {
+	border: 1px solid #aaa;
+    padding: 7px;
+    background: #fafafa;
+    border-radius: 8px;
+    margin: 11px;	
+}
+.me {
+	float: right;
+	width: 50%;
+}
+.friend {
+	float: left;
+	width: 50%;
+}
