--- a/www/css/style.css
+++ b/www/css/style.css
@@ -20,3 +20,12 @@
 	float: left;
 	width: 50%;
 }
+.chatbox {
+	padding: 0;
+    border-color: #fff;
+    width: 100%;
+}
+.chatbox ion-textarea {
+    width: 100%;
+    height: 100%;
+}
